--- a/Lab6_KennethNuñez/nbproject/project.properties
+++ b/Lab6_KennethNuñez/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=lab6_kennethnu\u00f1ez.Lab6_KennethNu\u00f1ez
+main.class=lab6_kennethnu\u00f1ez.MainCreatures
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
